// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is \`multi\` 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
    key="description-step-rule-0"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 1,
            "title": "Risk score",
          },
          Object {
            "description": "Titled timeline",
            "title": "Timeline template",
          },
        ]
      }
    />
  </EuiFlexItem>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
    key="description-step-rule-1"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": <ForwardRef
              alignItems="flexStart"
              direction="column"
              gutterSize="none"
            >
              <EuiFlexItem>
                <ForwardRef(Styled(EuiButtonEmpty))
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                  flush="left"
                  href="www.test.co"
                  iconType="link"
                  size="xs"
                  target="_blank"
                >
                  www.test.co
                </ForwardRef(Styled(EuiButtonEmpty))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Reference URLs",
          },
          Object {
            "description": <ul>
              <li
                data-test-subj="unorderedListArrayDescriptionItem"
              >
                test
              </li>
            </ul>,
            "title": "False positive examples",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexGroup))
              direction="column"
            >
              <EuiFlexItem>
                <ForwardRef
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </ForwardRef>
                <ForwardRef
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <ForwardRef(Styled(EuiButtonEmpty))
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </ForwardRef(Styled(EuiButtonEmpty))>
                  </EuiFlexItem>
                </ForwardRef>
              </EuiFlexItem>
              <EuiSpacer />
            </ForwardRef(Styled(EuiFlexGroup))>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <ForwardRef
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Tags",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexItem))>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # test documentation
              </div>
            </ForwardRef(Styled(EuiFlexItem))>,
            "title": "Investigation notes",
          },
        ]
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is \`single\` 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 1,
            "title": "Risk score",
          },
          Object {
            "description": "Titled timeline",
            "title": "Timeline template",
          },
          Object {
            "description": <ForwardRef
              alignItems="flexStart"
              direction="column"
              gutterSize="none"
            >
              <EuiFlexItem>
                <ForwardRef(Styled(EuiButtonEmpty))
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                  flush="left"
                  href="www.test.co"
                  iconType="link"
                  size="xs"
                  target="_blank"
                >
                  www.test.co
                </ForwardRef(Styled(EuiButtonEmpty))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Reference URLs",
          },
          Object {
            "description": <ul>
              <li
                data-test-subj="unorderedListArrayDescriptionItem"
              >
                test
              </li>
            </ul>,
            "title": "False positive examples",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexGroup))
              direction="column"
            >
              <EuiFlexItem>
                <ForwardRef
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </ForwardRef>
                <ForwardRef
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <ForwardRef(Styled(EuiButtonEmpty))
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </ForwardRef(Styled(EuiButtonEmpty))>
                  </EuiFlexItem>
                </ForwardRef>
              </EuiFlexItem>
              <EuiSpacer />
            </ForwardRef(Styled(EuiFlexGroup))>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <ForwardRef
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Tags",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexItem))>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # test documentation
              </div>
            </ForwardRef(Styled(EuiFlexItem))>,
            "title": "Investigation notes",
          },
        ]
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is \`singleSplit 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
  >
    <Styled(EuiDescriptionList)
      data-test-subj="singleSplitStepRuleDescriptionList"
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 1,
            "title": "Risk score",
          },
          Object {
            "description": "Titled timeline",
            "title": "Timeline template",
          },
          Object {
            "description": <ForwardRef
              alignItems="flexStart"
              direction="column"
              gutterSize="none"
            >
              <EuiFlexItem>
                <ForwardRef(Styled(EuiButtonEmpty))
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                  flush="left"
                  href="www.test.co"
                  iconType="link"
                  size="xs"
                  target="_blank"
                >
                  www.test.co
                </ForwardRef(Styled(EuiButtonEmpty))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Reference URLs",
          },
          Object {
            "description": <ul>
              <li
                data-test-subj="unorderedListArrayDescriptionItem"
              >
                test
              </li>
            </ul>,
            "title": "False positive examples",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexGroup))
              direction="column"
            >
              <EuiFlexItem>
                <ForwardRef
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </ForwardRef>
                <ForwardRef
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <ForwardRef(Styled(EuiButtonEmpty))
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </ForwardRef(Styled(EuiButtonEmpty))>
                  </EuiFlexItem>
                </ForwardRef>
              </EuiFlexItem>
              <EuiSpacer />
            </ForwardRef(Styled(EuiFlexGroup))>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <ForwardRef
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <ForwardRef(Styled(EuiBadge))
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </ForwardRef(Styled(EuiBadge))>
              </EuiFlexItem>
            </ForwardRef>,
            "title": "Tags",
          },
          Object {
            "description": <ForwardRef(Styled(EuiFlexItem))>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # test documentation
              </div>
            </ForwardRef(Styled(EuiFlexItem))>,
            "title": "Investigation notes",
          },
        ]
      }
      type="column"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
